# calender1

./: README.md  db.sqlite3  pyproject.toml
events/: models.py
mysite/settings/: base.py  dev.py
static/: staticfiles.json
